terraform-eks/nat.tf
resource "aws_eip" "ngw_ip" {
    vpc   = true
}

resource "aws_nat_gateway" "ngw" {
    allocation_id = aws_eip.ngw_ip.id
    subnet_id     = aws_subnet.pub_a.id

    tags = {
        Name = "NAT Gateway"
    }
}
